# squire

./: Cargo.toml
migrations/2023-04-23-012502_create_counters/: down.sql  up.sql
migrations/2023-04-23-014917_create_highlights/: down.sql  up.sql
migrations/2023-04-23-015420_create_homeassistant_webhooks/: down.sql  up.sql
migrations/2023-04-23-015636_create_homeassistant_broadcast_channels/: down.sql  up.sql
migrations/2023-04-24-172834_create-highlights-guild-idx/: down.sql  up.sql
migrations/2023-05-01-233811_sub_counters/: down.sql  up.sql
src/: main.rs  models.rs  redis.rs
src/database/: counters.rs  highlights.rs  home_assistant.rs  mod.rs  schema.rs
