[package]
name = "squire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
dotenv = "0.15.0"
futures = "0.3.28"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
twilight-cache-inmemory = "0.15.1"
twilight-gateway = "0.15.1"
twilight-gateway-queue = "0.15.1"
twilight-http = "0.15.1"
twilight-model = "0.15.1"
twilight-util = "0.15.1"
twilight-validate = "0.15.1"
diesel = { version = "2.0.0", features = ["postgres", "chrono", "uuid"] }
uuid = "1.3.1"
redis = { version = "0.23.0" }
